--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -8,9 +8,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2018-03-02 11:18+0100\n"
+"PO-Revision-Date: 2019-04-10 15:04-0400\n"
 "Language-Team: \n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2\n"
 "Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Language: de_DE\n"
@@ -54,7 +54,7 @@ msgstr "Kommentare sind deaktiviert."
 
 #: content/archive-header.php:13
 msgid "Posts tagged as"
-msgstr "Alle Beiträge zum Thema %s"
+msgstr "Alle Beiträge zum Thema"
 
 #: content/comments-link.php:3
 msgid "comment icon"
@@ -925,4 +925,3 @@ msgstr "Von %s"
 msgctxt "This blog post was published by some author on some date "
 msgid "By %1$s on %2$s"
 msgstr "Von %1$s auf %2$s"
-
