--- a/languages/ru_RU.po
+++ b/languages/ru_RU.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: Mission News 1.12\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/style\n"
 "POT-Creation-Date: 2018-02-04 14:49+0800\n"
-"PO-Revision-Date: 2018-02-04 14:49+0800\n"
+"PO-Revision-Date: 2019-04-10 15:05-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.2\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
@@ -55,7 +55,7 @@ msgstr "Комментарии отключены."
 
 #: content/archive-header.php:13
 msgid "Posts tagged as"
-msgstr "Записи, отмеченные меткой \"%s\""
+msgstr "Записи, отмеченные меткой"
 
 #: content/comments-link.php:3
 msgid "comment icon"
